# axum

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20230930_174459_create_table.rs  m20230930_184520_create_users_table.rs  m20230930_192340_create_users_table_2.rs  m20230930_192834_create_tasks_table.rs
src/: lib.rs  main.rs
src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
src/routes/: create_task.rs  delete_task.rs  get_json.rs  get_tasks.rs  guard.rs  hello_world.rs  mirror_body_json.rs  mod.rs  partial_update_task.rs  path_variables.rs  set_middleware_custom_headers.rs  update_tasks.rs  users.rs  validate_data.rs
src/utils/: app_error.rs  jwt.rs
